force-app/main/default/objects/TWIST_Registration_Form_Settings__c/TWIST_Registration_Form_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TWIST Registration Form Settings</label>
</CustomObject>