force-app/main/default/objects/TWIST_Registration_Form_Settings__c/fields/Code_Validity_Time__c.field-meta.xml
<CustomField>
    <fullName>Code_Validity_Time__c</fullName>
    <label>Code Validity Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>