force-app/main/default/objects/TWIST_Registration_Form_Settings__c/fields/Default_Activation_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Activation_Code__c</fullName>
    <label>Default Activation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>