force-app/main/default/objects/TWIST_Registration_Form_Settings__c/fields/Tealium_Environment__c.field-meta.xml
<CustomField>
    <fullName>Tealium_Environment__c</fullName>
    <label>Tealium Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>